--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@ body{
     margin: 0;
 }
 .parallax-container{
-    position: s;
+    display: flex;
     width: 100%;
     height: 100vh;
     perspective: 8px;
@@ -19,7 +19,7 @@ body{
     position: absolute;
     height: auto;
     width: 50%;
-    transform-origin: 0 50%;
+    transform-origin: 10% 50%;
     transform: translateZ(0px) scale(1);
 }
 .image-midle{
